# ChipSequencer

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  build.sh  compile.bat  compile.sh  config.py  config.yaml  linker.lnk  run.bat
cmake/: Application.cmake  Assembly.cmake  ClangTidy.cmake  Dependencies.cmake  PlatformConfig.cmake  ThirdParty.cmake  Utils.cmake
core/: common.asm  driver.asm  elements.asm  main.asm  player.asm  song.asm  utils.asm  vars.asm
core/commands/: bpm.asm  change.asm  division.asm  empty.asm  gainer.asm  port.asm  tempo.asm
core/common/: config.asm  const.asm  macros.asm  offsets.asm  sizes.asm
core/driver/: direct.asm  sb16.asm
core/dsp/: delay.asm  distort.asm  filter.asm  gainer.asm
core/elements/: adsr.asm  channel.asm  commands.asm  dsp.asm  mixer.asm  order.asm  osc.asm  sequence.asm
core/osc/: noise.asm  saw.asm  sine.asm  square.asm  wave.asm
core/platform/: linux.asm  win.asm  windows.asm
core/song/: data.asm  header.asm
core/utils/: math.asm  precalc.asm  table.asm
player/: main.asm  main.cpp  main.hpp
scripts/: check_size.py  compile.py  config.py  constants.py  generate_sizes.py  pragma.py  pyconf.py  song.py  utils.py
scripts/compiler/: compiler.py  link.py  size_checker.py
scripts/constant/: manager.py
scripts/constant_manager/: manager.py
scripts/scales/: composer.py  constants.py  frequencies.py
scripts/structures/: channel.py  creator.py  dsp.py  enumeration.py  envelope.py  order.py  oscillator.py  output.py  sequence.py  song.py  types.py  wavetable.py
shell/: shortcut.ps1
shell/linux/: compile.sh
shell/win/: compile.bat
shell/windows/: compile.bat
src/: adsr.asm  channel.asm  common.asm  config.asm  const.asm  driver.asm  dsp.asm  elements.asm  instr.asm  main.asm  math.asm  mixer.asm  osc.asm  player.asm  sb.asm  sequence.asm  song.asm  sound.asm  utils.asm  vars.asm
src/common/: const.asm  macros.asm
src/driver/: direct.asm  sb16.asm
src/dsp/: delay.asm  filter.asm  gainer.asm
src/elements/: adsr.asm  channel.asm  dsp.asm  mixer.asm  order.asm  osc.asm  sequence.asm
src/osc/: saw.asm  sine.asm  square.asm  wave.asm
src/song/: data.asm  header.asm
src/utils/: dos.asm  ext.asm  fft.asm  macros.asm  math.asm  precalc.asm  table.asm
themes/: default.json  light.json
tracker/: constants.hpp  general.cpp  general.hpp  main.cpp  sizes.hpp  song.hpp  structures.hpp  utils.hpp  version.hpp
tracker/audio/: engine.cpp  engine.hpp  fft.cpp  fft.hpp  wave.cpp  wave.hpp
tracker/driver/: driver.hpp  file.cpp  file.hpp  port.cpp  port.hpp
tracker/gui/: constants.hpp  default.hpp  enums.hpp  envelopes.hpp  gui.cpp  gui.hpp  init.hpp  input.cpp  input.hpp  keyboard.hpp  keys.cpp  keys.hpp  mapping.hpp  names.cpp  names.hpp  node.cpp  node.hpp  pattern.cpp  pattern.hpp  shortcuts.cpp  shortcuts.hpp  undo.cpp  undo.hpp  utils.cpp  utils.hpp
tracker/gui/actions/: action.cpp  action.hpp  change.hpp  history.cpp  history.hpp  shortcuts.cpp  shortcuts.hpp
tracker/gui/clipboard/: category.hpp  clipboard.cpp  clipboard.hpp  item.hpp  manager.hpp
tracker/gui/clipboard/items/: commands.cpp  commands.hpp  item.cpp  item.hpp  notes.cpp  notes.hpp
tracker/gui/history/: manager.cpp  manager.hpp  shortcuts.cpp  shortcuts.hpp
tracker/gui/history/actions/: action.cpp  action.hpp  add.cpp  add.hpp  command.cpp  command.hpp  lock.cpp  lock.hpp  note.cpp  note.hpp  order_item.cpp  order_item.hpp  remove.cpp  remove.hpp  routing.cpp  routing.hpp  selection.cpp  selection.hpp  sequence.cpp  sequence.hpp  text.cpp  text.hpp  value.cpp  value.hpp  wavetable.cpp  wavetable.hpp
tracker/gui/history/changes/: command.hpp  note.hpp  order_item.hpp  routing.hpp  selection.hpp  sequence.hpp  text.hpp  value.hpp  wavetable.hpp
tracker/gui/inputs/: input.cpp  input.hpp  numeric.cpp  numeric.hpp  string.cpp  string.hpp
tracker/gui/lock/: registry.cpp  registry.hpp
tracker/gui/panels/: channels.cpp  channels.hpp  commands.cpp  commands.hpp  dsps.cpp  dsps.hpp  editor.cpp  editor.hpp  envelopes.cpp  envelopes.hpp  general.cpp  general.hpp  menu.cpp  menu.hpp  orders.cpp  orders.hpp  oscillators.cpp  oscillators.hpp  panel.cpp  panel.hpp  patterns.cpp  patterns.hpp  routing.cpp  routing.hpp  routings.cpp  routings.hpp  sequences.cpp  sequences.hpp  summary.cpp  summary.hpp  utils.cpp  utils.hpp  waveform.cpp  waveform.hpp  wavetables.cpp  wavetables.hpp
tracker/gui/panels/commands/: channels.cpp  channels.hpp  sequences.cpp  sequences.hpp
tracker/gui/patterns/: commands.cpp  commands.hpp  display.hpp  index.hpp  pattern.cpp  pattern.hpp  selection.cpp  selection.hpp
tracker/gui/shortcuts/: manager.cpp  manager.hpp  shortcut.hpp
tracker/gui/themes/: color.cpp  color.hpp  item.hpp  theme.cpp  theme.hpp
tracker/maps/: commands.hpp  dsps.hpp  keys.hpp  offsets.hpp  oscillators.hpp  routing.cpp  routing.hpp  sizes.hpp  x16_to_x32.json  x32_to_x16.json
tracker/song/: buffers.cpp  buffers.hpp  compilation.hpp  core.cpp  core.hpp  data.cpp  data.hpp  functions.hpp  headers.hpp  link.cpp  link.hpp  output.cpp  output.hpp  song.cpp  song.hpp  target.hpp  validation.hpp
tracker/song/links/: key.hpp  link.cpp  link.hpp  manager.cpp  manager.hpp  target.cpp  target.hpp  type.hpp
tracker/song/lock/: registry.cpp  registry.hpp
tracker/structures/: channel.cpp  channel.hpp  commands.cpp  commands.hpp  dsp.cpp  dsp.hpp  envelope.hpp  offsets.hpp  order.cpp  order.hpp  oscillator.hpp  sequence.cpp  sequence.hpp  sizes.hpp  song.hpp  targets.hpp  wavetable.cpp  wavetable.hpp
tracker/structures/commands/: channel.hpp  command.cpp  command.hpp  sequence.cpp  sequence.hpp
tracker/structures/resources/: manager.cpp  manager.hpp
tracker/tuning/: constants.hpp  frequencies.cpp  frequencies.hpp  scale.cpp  scale.hpp
tracker/utils/: file.cpp  file.hpp  math.cpp  math.hpp  paths.cpp  paths.hpp  string.cpp  string.hpp  system.cpp  system.hpp  temp.cpp  temp.hpp
